tests/expectations/compiler/option/record_with_optional_fields_fail.out
Error [ETYC0372162]: The field `data` in this record has type `u8?`, which is or contains an optional type.
    --> compiler-test:9:9
     |
   9 |         data: u8?, // ERROR: optional type directly
     |         ^^^^^^^^^
     |
     = Records cannot have fields that are optional or contain optionals. Consider moving the optionality outside the record.
Error [ETYC0372162]: The field `flags` in this record has type `[bool?; 4]`, which is or contains an optional type.
    --> compiler-test:15:9
     |
  15 |         flags: [bool?; 4], // ERROR: contains optional
     |         ^^^^^^^^^^^^^^^^^
     |
     = Records cannot have fields that are optional or contain optionals. Consider moving the optionality outside the record.
Error [ETYC0372162]: The field `inner` in this record has type `record_with_optional_fields.aleo/InnerStruct`, which is or contains an optional type.
    --> compiler-test:20:9
     |
  20 |         inner: InnerStruct, // ERROR: contains optional via nested struct
     |         ^^^^^^^^^^^^^^^^^^
     |
     = Records cannot have fields that are optional or contain optionals. Consider moving the optionality outside the record.
